--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.ferstl</groupId>
   <artifactId>jitwatch-jarscan-maven-plugin</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+  <properties>
+    <slf4j.version>1.7.7</slf4j.version>
+    <logback.version>1.1.2</logback.version>
+    <java.version>1.7</java.version>
+    <tools.jar>${java.home}/../lib/tools.jar</tools.jar>
+    <generated.source.dir>${project.build.directory}/generated-sources/java</generated.source.dir>
+    <jitwatch.source.dir>${project.basedir}/jitwatch/src/main/java</jitwatch.source.dir>
+    <project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
+  </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>${logback.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+      <version>${logback.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.oracle</groupId>
+      <artifactId>tools.jar</artifactId>
+      <version>${java.version}</version>
+      <systemPath>${tools.jar}</systemPath>
+      <scope>system</scope>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.3</version>
+        <configuration>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>2.7</version>
+        <executions>
+          <execution>
+            <id>copy-jarscanner-sources</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${generated.source.dir}</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>${jitwatch.source.dir}</directory>
+                  <includes>
+                    <include>org/adoptopenjdk/jitwatch/core/JITWatchConstants.java</include>
+                    <include>org/adoptopenjdk/jitwatch/jarscan/JarScan.java</include>
+                    <include>org/adoptopenjdk/jitwatch/loader/BytecodeLoader.java</include>
+                    <include>org/adoptopenjdk/jitwatch/loader/DisposableURLClassLoader.java</include>
+                    <include>org/adoptopenjdk/jitwatch/journal/</include>
+                    <include>org/adoptopenjdk/jitwatch/model/</include>
+                    <include>org/adoptopenjdk/jitwatch/optimizedvcall/</include>
+                    <include>org/adoptopenjdk/jitwatch/treevisitor/</include>
+                    <include>org/adoptopenjdk/jitwatch/util/ClassUtil.java</include>
+                    <include>org/adoptopenjdk/jitwatch/util/ParseUtil.java</include>
+                    <include>org/adoptopenjdk/jitwatch/util/StringUtil.java</include>
+                    <include>org/adoptopenjdk/jitwatch/util/TooltipUtil.java</include>
+                  </includes>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>1.9.1</version>
+        <executions>
+          <execution>
+            <id>add-generated-sources-folder</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>${generated.source.dir}</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
