--- a/pom.xml
+++ b/pom.xml
@@ -69,21 +69,21 @@
   <properties>
     <!-- Plugin versions. -->
     <maven-license-plugin.version>2.10</maven-license-plugin.version>
-    <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
+    <maven-clean-plugin.version>2.6.1</maven-clean-plugin.version>
     <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
-    <maven-deploy-plugin.version>2.8.1</maven-deploy-plugin.version>
+    <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
     <maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
-    <maven-install-plugin.version>2.5.1</maven-install-plugin.version>
-    <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
-    <maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
+    <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
+    <maven-jar-plugin.version>2.5</maven-jar-plugin.version>
+    <maven-javadoc-plugin.version>2.10.1</maven-javadoc-plugin.version>
     <maven-plugin-plugin.version>3.4</maven-plugin-plugin.version>
-    <maven-project-info-reports-plugin.version>2.7</maven-project-info-reports-plugin.version>
-    <maven-release-plugin.version>2.4.2</maven-release-plugin.version>
-    <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
+    <maven-project-info-reports-plugin.version>2.8.1</maven-project-info-reports-plugin.version>
+    <maven-release-plugin.version>2.5.1</maven-release-plugin.version>
+    <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
     <maven-scm-publish-plugin.version>1.1</maven-scm-publish-plugin.version>
-    <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
+    <maven-source-plugin.version>2.4</maven-source-plugin.version>
     <maven-site-plugin.version>3.3</maven-site-plugin.version>
-    <maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
+    <maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
 
     <!-- Dependency versions -->
     <slf4j.version>1.7.7</slf4j.version>
@@ -95,7 +95,8 @@
     <tools.jar>${java.home}/../lib/tools.jar</tools.jar>
     <generated.source.dir>${project.build.directory}/generated-sources/java</generated.source.dir>
     <jitwatch.source.dir>${project.basedir}/jitwatch/src/main/java</jitwatch.source.dir>
-    <project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
 
   <dependencies>
