Fix goal prefix

--- a/pom.xml
+++ b/pom.xml
@@ -384,7 +384,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-plugin-plugin</artifactId>
         <configuration>
-          <goalPrefix>depgraph</goalPrefix>
+          <goalPrefix>jarscan</goalPrefix>
           <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
         </configuration>
         <executions>
