--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "jitwatch"]
 	path = jitwatch
-	url = git@github.com:AdoptOpenJDK/jitwatch.git
+	url = https://github.com/AdoptOpenJDK/jitwatch.git
