--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.ferstl</groupId>
@@ -91,6 +92,7 @@
 
     <!-- Other settings -->
     <java.version>1.7</java.version>
+    <goal.prefix>jarscan</goal.prefix>
     <tools.jar>${java.home}/../lib/tools.jar</tools.jar>
     <generated.source.dir>${project.build.directory}/generated-sources/java</generated.source.dir>
     <jitwatch.source.dir>${project.basedir}/jitwatch/src/main/java</jitwatch.source.dir>
@@ -234,6 +236,7 @@
           <version>${maven-plugin-plugin.version}</version>
           <configuration>
             <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+            <goalPrefix>${goal.prefix}</goalPrefix>
           </configuration>
         </plugin>
 
@@ -382,10 +385,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-plugin-plugin</artifactId>
-        <configuration>
-          <goalPrefix>jarscan</goalPrefix>
-          <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
-        </configuration>
         <executions>
           <execution>
             <id>mojo-descriptor</id>
@@ -445,6 +444,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-plugin-plugin</artifactId>
         <version>${maven-plugin-plugin.version}</version>
+        <configuration>
+          <goalPrefix>${goal.prefix}</goalPrefix>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
