--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.ferstl</groupId>
   <artifactId>jitwatch-jarscan-maven-plugin</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.1</version>
   <packaging>maven-plugin</packaging>
 
   <name>JitWatch JarScan Maven Plugin</name>
@@ -48,7 +47,7 @@
     <connection>scm:git:https://github.com/ferstl/jitwatch-jarscan-maven-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:ferstl/jitwatch-jarscan-maven-plugin.git</developerConnection>
     <url>${project.url}</url>
-    <tag>HEAD</tag>
+    <tag>jitwatch-jarscan-maven-plugin-1.0.1</tag>
   </scm>
 
   <distributionManagement>
