--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
 
   <properties>
     <!-- Plugin versions. -->
-    <maven-license-plugin.version>2.10</maven-license-plugin.version>
+    <license-maven-plugin.version>2.10</license-maven-plugin.version>
     <maven-clean-plugin.version>2.6.1</maven-clean-plugin.version>
     <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
     <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
@@ -159,7 +159,7 @@
         <plugin>
           <groupId>com.mycila</groupId>
           <artifactId>license-maven-plugin</artifactId>
-          <version>${maven-license-plugin.version}</version>
+          <version>${license-maven-plugin.version}</version>
           <configuration>
             <header>${project.basedir}/src/etc/header.txt</header>
             <strictCheck>true</strictCheck>
