--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.github.ferstl</groupId>
   <artifactId>jitwatch-jarscan-maven-plugin</artifactId>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1</version>
   <packaging>maven-plugin</packaging>
 
   <name>JITWatch JarScan Maven Plugin</name>
@@ -47,7 +47,7 @@
     <connection>scm:git:https://github.com/ferstl/jitwatch-jarscan-maven-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:ferstl/jitwatch-jarscan-maven-plugin.git</developerConnection>
     <url>${project.url}</url>
-    <tag>HEAD</tag>
+    <tag>jitwatch-jarscan-maven-plugin-1.1</tag>
   </scm>
 
   <distributionManagement>
